--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -160,7 +160,7 @@
     max-width: 68px;
 }
 
-.nav_bar {
+.nav-bar {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -189,6 +189,7 @@
 .bg-slider-blue {
     background-image: url(../images/webp/slider-bg.webp);
     background-size: cover;
+    background-position: 50% 0%;
     background-repeat: no-repeat;
 }
 
@@ -220,7 +221,7 @@
 }
 
 .btn-enter {
-    padding: 16px 31px;
+    padding: 8.5px 30.5px;
     border-radius: 8px;
     border: 1px solid #1643C3;
     background: transparent;
@@ -265,16 +266,26 @@
 .layer {
     width: 190px;
     height: 190px;
-    top: -17.06px;
     left: -29.82px;
-    gap: 0px;
     opacity: 45%;
     filter: blur(120px);
     top: -17px;
     z-index: -1;
     pointer-events: none;
     position: absolute;
-    left: -29px;
+    background: #3916C3;
+}
+
+.layer-blue {
+    width: 190px;
+    height: 190px;
+    bottom: 0;
+    right: -81px;
+    opacity: 45%;
+    filter: blur(120px);
+    z-index: -1;
+    pointer-events: none;
+    position: absolute;
     background: #3916C3;
 }
 
@@ -296,8 +307,12 @@
     padding-top: 100px;
 }
 
-.max-w-819 {
-    max-width: 819px;
+.max-w-730 {
+    max-width: 730px;
+}
+
+.max-w-479 {
+    max-width: 479px;
 }
 
 .set-bottom-cloud {
@@ -315,7 +330,6 @@
     border: 1px solid #1643C3;
     backdrop-filter: blur(12.5px);
     border-radius: 12px;
-    box-shadow: 0px 4px 41px 0px #4281EE70;
     background: linear-gradient(124.24deg, rgba(19, 245, 255, 0.25) 7.19%, rgba(0, 66, 255, 0) 93.2%);
 }
 
@@ -354,9 +368,30 @@
 
 .btn-view {
     background: linear-gradient(93deg, #1643C3 10.24%, #369EFE 208.68%);
-    padding: 17px 16px;
+    padding: 10.5px 16px;
     border: none;
     transition: all .3s;
+}
+
+.text-decoration-underline-after::after {
+    content: '';
+    position: absolute;
+    bottom: 4px;
+    left: 0;
+    height: 1px;
+    background: white;
+    width: 100%;
+    transition: all .3s linear;
+}
+
+.text-decoration-underline-after:hover::after {
+    content: '';
+    position: absolute;
+    bottom: 4px;
+    left: 0;
+    height: 1px;
+    background: white;
+    width: 0;
 }
 
 .btn-view:hover {
@@ -393,7 +428,7 @@
     max-width: 511px;
 }
 
-.btn-enter1 {
+.btn-enter-md {
     display: none;
 }
 
@@ -401,6 +436,7 @@
     position: absolute;
     background: white;
     min-width: 109px;
+    overflow: hidden;
     z-index: 1;
     display: none;
     border-radius: 18px;
@@ -428,16 +464,15 @@
 }
 
 .dropdown-box a {
-    width: 108px;
+    width: 100%;
     height: 45px;
-    border-radius: 18px;
     border-bottom: 1px solid #E8E8E8;
     background: rgba(196, 196, 196, 0.00);
 }
 
 .dropdown-box a:hover {
-    background: var(--gray5);
-    color: var(--white);
+    background: var(--c-blue-300);
+    color: white;
 }
 
 .gap-btn {
@@ -450,7 +485,7 @@
 }
 
 .bg-header {
-    background-image: url("../images/webp/bg-header2.webp");
+    background-image: url("../images/webp/bg-header-2.webp");
     background-repeat: no-repeat;
     background-size: 147% 121%;
     background-position: center;
@@ -513,7 +548,7 @@
         padding: 28px 0;
     }
 
-    .nav_bar {
+    .nav-bar {
         list-style-type: none;
         overflow: hidden;
         width: 100%;
@@ -532,9 +567,9 @@
         padding-left: 0 !important;
     }
 
-    .btn-enter1 {
+    .btn-enter-md {
         display: block;
-        padding: 16px 31px;
+        padding: 8.5px 31px;
         border-radius: 8px;
         border: 1px solid var(--Blue, #fff);
         background: transparent;
@@ -571,6 +606,20 @@
 
     .p-0 {
         padding: 0 !important;
+    }
+}
+
+@media (min-width:390px) {
+    .bg-token {
+        background-size: 100% 93%;
+    }
+}
+
+@media (min-width:576px) {
+    .bg-amplify {
+        background-size: 100% 96%;
+        background-position: bottom;
+        height: 596px;
     }
 }
 
@@ -630,12 +679,6 @@
         gap: 20px;
     }
 
-    .bg-amplify {
-        background-size: 100% 98%;
-        background-position: bottom;
-        height: 596px;
-    }
-
     .inovation .slick-slide {
         padding-bottom: 42px;
     }
@@ -665,13 +708,17 @@
         --fs-6xl: 132px;
     }
 
+    .card-slider-core {
+        box-shadow: 0px 4px 41px 0px #4281EE70;
+    }
+
     .mt-lg-29 {
         margin-top: 29px;
     }
 
     .set-bottom-cloud {
         position: absolute;
-        bottom: -84px;
+        bottom: -64px;
         left: 0%;
         pointer-events: none;
         width: 100%;
@@ -681,7 +728,7 @@
         background-image: url("../images/webp/bg-twocolor.webp");
         background-size: 100% 110%;
         padding-top: 176px;
-        padding-bottom: 176px;
+        padding-bottom: 166px;
     }
 
     .bg-slider-blue {
@@ -698,9 +745,8 @@
         padding-top: 0;
     }
 
-    .bg-amplify {
-        background-size: 100% 100%;
-        min-height: 833px;
+    .pt-lg-162 {
+        padding-top: 162px;
     }
 
     .gap-btn {
@@ -710,8 +756,8 @@
     .bg-header {
         background-image: url("../images/webp/header-bg-img.webp");
         background-repeat: no-repeat;
-        background-size: 119% 150%;
-        background-position: center;
+        background-size: cover;
+        background-position: 0% 0%;
         width: 100%;
         height: 905px;
     }
@@ -725,6 +771,38 @@
     }
 }
 
+@media (min-width:1200px) {
+    .bg-amplify {
+        background-size: 100% 100%;
+        min-height: 833px;
+    }
+
+    .set-bottom-cloud {
+        position: absolute;
+        bottom: -84px;
+        left: 0%;
+        pointer-events: none;
+        width: 100%;
+    }
+}
+
+@media (min-width:1200px) {
+    .gap-btn {
+        gap: 102px;
+    }
+}
+
+@media (min-width:1600px) {
+    .bg-header {
+        background-size: 93% 100%;
+        background-position: 0% 0%;
+    }
+
+    .set-bottom-cloud {
+        bottom: -110px;
+    }
+}
+
 @media (min-width:992px) and (max-width:1200px) {
     .bg-header {
         background-image: url("../images/webp/header-bg-img.webp");
@@ -733,16 +811,14 @@
         background-position: center;
         width: 100%;
     }
+
+    .max-xl-object-contain {
+        object-fit: contain;
+    }
 }
 
 @media (min-width:1300px) and (max-width:1600px) {
     .container {
         max-width: 1162px !important;
-    }
-}
-
-@media (min-width:1200px) {
-    .gap-btn {
-        gap: 117px;
     }
 }
